--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -40,6 +40,7 @@
 
 ### 生成菜单数据
 - 每一张表生成完CRUD功能后，基于其vue页面路径、Controller的@PreAuthorize()配置生成菜单数据SQL
+- 生成的SQL写入docs模块下的sql/menu.sql文件中
 - 示例：
   vue页面路径web/src/views/dur/liability/cash/flow/index -> component: dur/liability/cash/flow/index，path: liabilityCashFlow
   INSERT INTO alm.sys_menu (menu_name,parent_id,order_num,`path`,component,query,route_name,is_frame,is_cache,menu_type,visible,status,perms,icon,create_by,create_time,update_by,update_time,remark) VALUES
