--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -27,7 +27,7 @@
     - 非查询场景Controller、Service层接受DTO对象
     - Service层与Mapper层之间要进行数据对象转换，处理请求时Service层DTO对象转为Mapper层的Entity对象，处理响应时Mapper层Entity转为Service层DTO对象
 6. 禁用com.jd.lightning.common.utils.poi.ExcelUtil
-7. 不要使用List.of()方法，JDK8不支持
+7. 禁用java.utilList.of()方法
 
 
 ### 前端规范（web模块）
@@ -36,7 +36,7 @@
 3. 列表展示：列表页展示 `*_val_set` 字段时，提取JSON的`key`作为表头、`val`作为值。
 4. 数据校验：对前端页面所有输入项进行校验，包括列表页查询条件和新增、编辑页的输入项，参考建表DDL语句中的数据类型、格式及长度对输入项添加校验规则
 5. 下载模板链接放到导入弹窗里
-6. index.vue里的handleExport()要使用src/utils/request.js里的download方法
+6. index.vue里的handleExport()参照web模块下src/views/system/user/index.vue写法
 
 ### 生成菜单数据
 - 每一张表生成完CRUD功能后，基于其vue页面路径、Controller的@PreAuthorize()配置生成菜单数据SQL
