--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -27,7 +27,7 @@
     - 非查询场景Controller、Service层接受DTO对象
     - Service层与Mapper层之间要进行数据对象转换，处理请求时Service层DTO对象转为Mapper层的Entity对象，处理响应时Mapper层Entity转为Service层DTO对象
 6. 禁用com.jd.lightning.common.utils.poi.ExcelUtil
-7. 禁用java.utilList.of()方法
+7. 禁用java.util.List.of()方法
 
 
 ### 前端规范（web模块）
