--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -36,7 +36,24 @@
 3. 列表展示：列表页展示 `*_val_set` 字段时，提取JSON的`key`作为表头、`val`作为值。
 4. 数据校验：对前端页面所有输入项进行校验，包括列表页查询条件和新增、编辑页的输入项，参考建表DDL语句中的数据类型、格式及长度对输入项添加校验规则
 5. 下载模板链接放到导入弹窗里
-6. index.vue里的handleExport()参照web模块下src/views/system/user/index.vue写法
+6. When implementing the handleExport() function in your index.vue files, follow this pattern:
+- The function should use the download utility method with three parameters:
+   - First parameter: API endpoint path (e.g., 'system/user/export')
+   - Second parameter: Query parameters object (typically using the component's queryParams)
+   - Third parameter: Filename with timestamp (e.g., `entity_${new Date().getTime()}.xlsx`)
+
+- Example implementation from system/user/index.vue:
+   ```javascript
+   handleExport() {
+     this.download(
+       'system/user/export',
+       {
+         ...this.queryParams,
+       },
+       `user_${new Date().getTime()}.xlsx`
+     );
+   }
+   ```
 
 ### 生成菜单数据
 - 每一张表生成完CRUD功能后，基于其vue页面路径、Controller的@PreAuthorize()配置生成菜单数据SQL
