--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -27,7 +27,8 @@
     - 非查询场景Controller、Service层接受DTO对象
     - Service层与Mapper层之间要进行数据对象转换，处理请求时Service层DTO对象转为Mapper层的Entity对象，处理响应时Mapper层Entity转为Service层DTO对象
 6. 禁用com.jd.lightning.common.utils.poi.ExcelUtil
-7. 禁用java.util.List.of()方法
+7. java.util.List.of()方法转为(new ArrayList()).add(Object)
+8. 生成的DTO、Query、Entity属性名和类型要严格对应SQL定义的字段名和类型，同时不要添加额外的属性信息
 
 
 ### 前端规范（web模块）
@@ -74,6 +75,7 @@
 
 ## Agent任务操作
 - 基于DDL生成前后端代码
-- 按表DDL定义顺序针对每张表创建CURD
+- 按表DDL定义顺序针对每张表生成CRUD功能代码
 - 每个任务拆解尽可能小和细，以减少与大模型交互的token大小
 - 不要自己创造表名，严格按DDL表名生成代码
+- 生成后的代码要保证编译不报错
