--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -48,6 +48,9 @@
   - 严禁使用com.jd.lightning.common.utils.poi.ExcelUtil
   - 禁止使用java.util.List.of()方法，必须替换为(new ArrayList()).add(Object)模式
 - **命名规范**：
+  - 类名必须基于表名生成，示例：
+    - 表名：t_dur_liability_cash_flow（dur为模块名）
+    - 类名：LiabilityCashFlow[Controller|DTO|Entity|Mapper|Query|Service|ServiceImpl]
   - 生成的DTO、Query、Entity属性名和类型必须严格对应SQL定义的字段名和类型
   - 不得添加SQL定义之外的额外属性
   - Controller返回类型必须使用com.jd.lightning.common.core.domain.Result
