--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -4,8 +4,7 @@
 生成基于数据库表定义的完整CRUD功能，包括后端Java代码、前端Vue界面和菜单SQL。
 
 ## 数据源文件
-- 表结构定义：`docs/sql/init.sql` - 必须严格按此文件中的表结构和字段定义生成代码
-- 数据字典：`docs/sql/dict.sql` - 用于生成下拉选项和展示值
+- 数据字典文件：docs/sql/dict.sql - 用于生成下拉选项和展示值
 
 ## 代码生成规范
 
@@ -46,7 +45,8 @@
     - 响应处理：Mapper层Entity必须转为Service层DTO对象
 - **禁用项**：
   - 严禁使用com.jd.lightning.common.utils.poi.ExcelUtil
-  - 禁止使用java.util.List.of()方法，必须替换为(new ArrayList()).add(Object)模式
+  - 严禁使用java.util.List.of()方法，必须替换为(new ArrayList()).add(Object)模式
+  - Controller层严禁使用toResult()方法
 - **命名规范**：
   - 类名必须基于表名生成，示例：
     - 表名：t_dur_liability_cash_flow（dur为模块名）
@@ -64,7 +64,9 @@
   - 模块名必须从表名提取，如t_{模块名}_liability_cash_flow
   - 其他单词必须从Controller类名提取
   - 示例：LiabilityCashFlowController → `web/src/views/dur/liability/cash/flow/index.vue`
-- **代码参考**：必须参照web/src/**/*.vue和web/src/**/*.js文件
+- **代码参考**：
+  - 必须参照web/src/**/*.vue和web/src/**/*.js文件
+  - 下拉列表中的dict_type必须参考数据字典文件中INSERT语句中的dict_type
 - **数据校验**：必须对所有输入项进行校验，包括：
   - 列表页查询条件
   - 新增、编辑页的所有输入项
@@ -81,11 +83,13 @@
     );
   }
   ```
+- **页面布局**：查询列表页面的查询条件组件（包括输入框、下拉框、日期等）一行最多展示3个，多出的换行展示
 
 ### 4. 菜单SQL生成规范
-- **生成时机**：每张表的CRUD功能完成后，必须生成对应菜单SQL
+- **生成时机**：每张表的CRUD功能代码生成完成后，必须生成对应菜单SQL
 - **生成依据**：基于vue页面路径和Controller的@PreAuthorize()配置
-- **输出位置**：生成的SQL必须写入`docs/sql/menu.sql`文件
+- **写入SQL文件**：生成的菜单SQL必须写入docs/sql/menu.sql文件
+- **禁止项**：禁止自行生成菜单SQL文件，必须追加写入docs/sql/menu.sql文件
 - **格式示例**：
   ```sql
   -- vue页面路径：web/src/views/dur/liability/cash/flow/index
@@ -103,6 +107,3 @@
 ## 执行要求
 - **代码生成位置**：必须严格按照上述规范在指定模块目录下生成代码
 - **处理顺序**：必须按表DDL定义顺序依次处理每张表
-- **任务拆分**：必须将任务拆解为小粒度执行，以减少token消耗
-- **表名约束**：严禁创造不存在的表名，必须严格按DDL中定义的表名生成代码
-- **质量要求**：生成的代码必须确保编译无错误
