--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -46,7 +46,7 @@
 - **禁用项**：
   - 严禁使用com.jd.lightning.common.utils.poi.ExcelUtil
   - 严禁使用java.util.List.of()方法，必须替换为(new ArrayList()).add(Object)模式
-  - Controller层严禁使用toResult()方法
+  - Controller层禁用toResult()方法
 - **命名规范**：
   - 类名必须基于表名生成，示例：
     - 表名：t_dur_liability_cash_flow（dur为模块名）
@@ -66,7 +66,6 @@
   - 示例：LiabilityCashFlowController → `web/src/views/dur/liability/cash/flow/index.vue`
 - **代码参考**：
   - 必须参照web/src/**/*.vue和web/src/**/*.js文件
-  - 下拉列表中的dict_type必须参考数据字典文件中INSERT语句中的dict_type
 - **数据校验**：必须对所有输入项进行校验，包括：
   - 列表页查询条件
   - 新增、编辑页的所有输入项
@@ -84,6 +83,24 @@
   }
   ```
 - **页面布局**：查询列表页面的查询条件组件（包括输入框、下拉框、日期等）一行最多展示3个，多出的换行展示
+- **下拉框实现**：所有下拉框代码必须按以下格式生成
+```vue
+<el-form-item label="某个下拉框" prop="${参数名}">
+  <el-select
+    v-model="queryParams.${参数名}"
+    placeholder="点位符"
+    clearable
+    style="width: 240px"
+  >
+    <el-option
+      v-for="dict in dict.type.${字典数据中的dict_type}"
+      :key="dict.value"
+      :label="dict.label"
+      :value="dict.value"
+    />
+  </el-select>
+</el-form-item>
+```
 
 ### 4. 菜单SQL生成规范
 - **生成时机**：每张表的CRUD功能代码生成完成后，必须生成对应菜单SQL
@@ -91,9 +108,8 @@
 - **写入SQL文件**：生成的菜单SQL必须写入docs/sql/menu.sql文件
 - **禁止项**：禁止自行生成菜单SQL文件，必须追加写入docs/sql/menu.sql文件
 - **格式示例**：
+  vue页面路径：web/src/views/dur/liability/cash/flow/index --> component: dur/liability/cash/flow/index，path: liabilityCashFlow
   ```sql
-  -- vue页面路径：web/src/views/dur/liability/cash/flow/index
-  -- 转换为：component: dur/liability/cash/flow/index，path: liabilityCashFlow
   INSERT INTO alm.sys_menu (menu_name,parent_id,order_num,`path`,component,query,route_name,is_frame,is_cache,menu_type,visible,status,perms,icon,create_by,create_time,update_by,update_time,remark) VALUES
   ('现金流管理',1,1,'liabilityCashFlow','dur/liability/cash/flow/index','','',1,0,'C','0','0','dur:liability:cash:flow:list','user','admin','2025-04-10 12:44:11','',NULL,'现金流管理菜单'),
   ('现金流查询',100,1,'','','','',1,0,'F','0','0','dur:liability:cash:flow:query','#','admin','2025-04-10 12:44:11','',NULL,''),
