--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -46,7 +46,9 @@
 - **禁用项**：
   - 严禁使用com.jd.lightning.common.utils.poi.ExcelUtil
   - 严禁使用java.util.List.of()方法，必须替换为(new ArrayList()).add(Object)模式
-  - Controller层禁用toResult()方法
+  - Controller层禁用toResult()方法，必须使用toAjax()方法
+    - 正确示例：`return toAjax(service.addUser(user));`
+    - 错误示例：`return toResult(service.addUser(user));`
 - **命名规范**：
   - 类名必须基于表名生成，示例：
     - 表名：t_dur_liability_cash_flow（dur为模块名）
@@ -106,7 +108,10 @@
 - **生成时机**：每张表的CRUD功能代码生成完成后，必须生成对应菜单SQL
 - **生成依据**：基于vue页面路径和Controller的@PreAuthorize()配置
 - **写入SQL文件**：生成的菜单SQL必须写入docs/sql/menu.sql文件
-- **禁止项**：禁止自行生成菜单SQL文件，必须追加写入docs/sql/menu.sql文件
+- **禁止项**：
+  - 禁止自行生成菜单SQL文件，必须追加写入docs/sql/menu.sql文件
+  - 正确示例：docs/sql/menu.sql
+  - 错误示例：docs/sql/menu_liability_cash_flow.sql
 - **格式示例**：
   vue页面路径：web/src/views/dur/liability/cash/flow/index --> component: dur/liability/cash/flow/index，path: liabilityCashFlow
   ```sql
