--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -92,7 +92,7 @@
     v-model="queryParams.${参数名}"
     placeholder="点位符"
     clearable
-    style="width: 240px"
+    style="width: ${根据字段实际长度设置宽度}px"
   >
     <el-option
       v-for="dict in dict.type.${字典数据中的dict_type}"
@@ -105,13 +105,7 @@
 ```
 
 ### 4. 菜单SQL生成规范
-- **生成时机**：每张表的CRUD功能代码生成完成后，必须生成对应菜单SQL
-- **生成依据**：基于vue页面路径和Controller的@PreAuthorize()配置
-- **写入SQL文件**：生成的菜单SQL必须写入docs/sql/menu.sql文件
-- **禁止项**：
-  - 禁止自行生成菜单SQL文件，必须追加写入docs/sql/menu.sql文件
-  - 正确示例：docs/sql/menu.sql
-  - 错误示例：docs/sql/menu_liability_cash_flow.sql
+- **写入SQL文件**：生成的菜单SQL必须写入docs/sql/menu.sql这个文件，禁止写入其他文件
 - **格式示例**：
   vue页面路径：web/src/views/dur/liability/cash/flow/index --> component: dur/liability/cash/flow/index，path: liabilityCashFlow
   ```sql
@@ -124,7 +118,10 @@
   ('现金流导出',100,5,'','','','',1,0,'F','0','0','dur:liability:cash:flow:export','#','admin','2025-04-10 12:44:11','',NULL,''),
   ('现金流导入',100,6,'','','','',1,0,'F','0','0','dur:liability:cash:flow:import','#','admin','2025-04-10 12:44:11','',NULL,'');
   ```
+- **SQL文件名命名规范**：
+  - 字典数据文件名：docs/sql/dict.sql
+  - 菜单数据文件名：docs/sql/menu.sql
 
 ## 执行要求
 - **代码生成位置**：必须严格按照上述规范在指定模块目录下生成代码
-- **处理顺序**：必须按表DDL定义顺序依次处理每张表
+- **执行顺序**：先生成后端代码，再生成前端代码，最后生成菜单SQL
