修正久期和有效久期功能开发

--- a/docs/prompt/2.generate_dict_data.md
+++ b/docs/prompt/2.generate_dict_data.md
@@ -4,7 +4,7 @@
 - CHARSET=utf8
 
 ## 需求描述：
-- 读取init.sql文件中的DDL，针对有多值的字段生成RUOYI字典数据的insert语句
+- 读取docs/sql目录下init.sql文件中的DDL，针对有多值的字段生成字典数据的insert语句
 - sys_dict_type表的dict_id字段是自增序列，不需要加到insert语句里
 - sys_dict_data表的dict_code字段是自增序列，不需要加到insert语句里
 - 生成的DML写入docs模块下的sql/dict.sql文件中
