--- a/docs/prompt/3.generate_crud_function.md
+++ b/docs/prompt/3.generate_crud_function.md
@@ -1,9 +1,10 @@
 # CRUD代码生成指令
 
 ## 任务概述
-生成基于数据库表定义的完整CRUD功能，包括后端Java代码、前端Vue界面和菜单SQL。
+依次读取docs/sql/init.sql中DDL建表信息，生成基于数据表定义的完整CRUD功能，包括后端Java代码、前端Vue界面和菜单SQL。
 
 ## 数据源文件
+- DDL文件：docs/sql/init.sql - 用于生成CRUD功能
 - 数据字典文件：docs/sql/dict.sql - 用于生成下拉选项和展示值
 
 ## 代码生成规范
