--- a/docs/prompt/1.generate_ddl.md
+++ b/docs/prompt/1.generate_ddl.md
@@ -4,7 +4,7 @@
 - CHARSET=utf8
 
 ## 需求描述：
-- 请基于docs模块下“design/program_design.md”文档中的2.3章节生成数据表的DDL
+- 请基于docs模块下“design/${program_design.md}”文档中的2.3章节生成数据表的DDL
 - 以init.sql文件存储到docs模块下的sql目录下，如果目录和init.sql文件已存在不需要创建
 - 所有表的DDL都写到init.sql中
 - 如果表名相同，不要覆盖init.sql文件中已有的DDL
