边际最低资本贡献率页面CRUD、批处理计算 功能修改，利率风险对冲率功能、批处理计算 开发。

--- a/docs/prompt/4.generate_program.md
+++ b/docs/prompt/4.generate_program.md
@@ -1,5 +1,5 @@
 # 代码生成要求
-- 基于${program_design.md}文档${4.1.3.1.3.4}章节需求生成功能代码
+- 基于${minimum_capital_program_design.md}文档${4.1.3.1.3.4}章节需求生成功能代码
 - 代码生成到${job}模块下
 - 生成代码过程要认真、细致，不能出现错误
 - 如代码已存在，再确认下已有代码是否符合需求
